--- a/src/entities/playground/ui/playground.css
+++ b/src/entities/playground/ui/playground.css
@@ -1,10 +1,12 @@
 .playground {
+   position: relative;
    max-width: 1280px;
    max-height: 800px;
    width: 80vw;
    height: 80vh;
    display: flex;
    border: 4px solid #56598b;
+   box-sizing: border-box;
 }
 
 .playground .canvas_grid {
@@ -14,8 +16,9 @@
 
 .post-label {
    position: absolute;
-   width: 20px;
-   height: 20px;
+   box-sizing: border-box;
+   width: 50px;
+   height: 50px;
    background-color: #9195e8;
    border: 4px solid #56598b;
    border-radius: 50%;
