--- a/src/entities/playground/ui/playground.css
+++ b/src/entities/playground/ui/playground.css
@@ -7,25 +7,55 @@
    display: flex;
    border: 4px solid #56598b;
    box-sizing: border-box;
+   border-radius: 10px;
 }
 
 .playground .canvas_grid {
    width: 100%;
-   height: 100%;
+   height: 100%
 }
 
-.post-label {
+.label-object {
    position: absolute;
    box-sizing: border-box;
-   width: 50px;
-   height: 50px;
-   background-color: #9195e8;
-   border: 4px solid #56598b;
-   border-radius: 50%;
    cursor: grab;
+   transform: scale(1);
+   transition: transform 2100ms;
 }
 
-.post-label.dragging {
+.label-object .MuiSvgIcon-root {
+   font-size: inherit;
+}
+
+@keyframes labelObjectDrop {
+   from {
+      transform: scale(1.2)
+   }
+
+   to {
+      transform: scale(1)
+   }
+}
+
+.label-object.dragging {
    cursor: grabbing;
-   box-shadow: 3px 3px 3px rgba(30, 30, 30, 0.3), 0 0 15px rgba(30, 30, 30, 0.1);
+   transform: scale(1.2);
+}
+
+.label-object:not(.dragging) {
+   cursor: grabbing;
+   animation: labelObjectDrop .1s cubic-bezier(.55, .35, .48, 1.64) forwards;
+}
+
+.label-object.dragging .MuiSvgIcon-root {
+   filter: drop-shadow(5px 5px 1px rgba(30, 30, 30, .3))
+}
+
+.label-object::after {
+   position: absolute;
+   content: '';
+   width: 110%;
+   height: 110%;
+   top: -5%;
+   left: -5%
 }
