--- a/src/entities/playground/ui/playground.css
+++ b/src/entities/playground/ui/playground.css
@@ -8,6 +8,7 @@
    border: 4px solid #56598b;
    box-sizing: border-box;
    border-radius: 10px;
+
 }
 
 .playground .canvas_grid {
@@ -31,7 +32,9 @@
    from {
       transform: scale(1.2)
    }
-
+   75% {
+      transform: scale(0.9)
+   }
    to {
       transform: scale(1)
    }
