upd, add spectrum page

--- a/src/entities/playground/ui/playground.css
+++ b/src/entities/playground/ui/playground.css
@@ -11,7 +11,10 @@
 
 }
 
-.playground .canvas_grid {
+.canvas_grid, .canvas_graph{
+   position: absolute;
+   top: 0;
+   left: 0;
    width: 100%;
    height: 100%
 }
