--- a/src/entities/spectrum/ui/spectrum.css
+++ b/src/entities/spectrum/ui/spectrum.css
@@ -2,34 +2,20 @@
    margin: 10px;
    position: relative;
    animation-delay:0.1s;
-   background-color: #000033;
+   border-radius: 10px;
 }
 
 .spectrum {
    height: 100%;
+   border-radius: 10px;
+   border: 2px solid rgba(240, 240, 255, 0.1);
 }
 
-.spectrum__layer {
+.graphlib-canvas-layer {
    border-radius: 10px;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    background-color: transparent;
-}
-
-#layer-axes {
-   z-index:10;
-}
-
-#layer-graph {
-   z-index: 8;
-}
-
-#layer-graph-max {
-   z-index: 9;
-}
-
-#layer-pointer {
-   z-index: 12;
 }
