--- a/src/entities/spectrum/ui/spectrum.css
+++ b/src/entities/spectrum/ui/spectrum.css
@@ -9,6 +9,8 @@
    height: 100%;
    border-radius: 10px;
    border: 2px solid rgba(240, 240, 255, 0.1);
+   position: relative;
+   z-index: 0;
 }
 
 .graphlib-canvas-layer {
